# 2026-World-Cup-Score-Predictions

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  dependencies.py  routes.py  schemas.py
db/: __init__.py  elo_reader.py  etl.py  models.py  reader.py
db/migrations/: init.sql
docs/: FRAMEWORK.md
frontend/: app.py
models/: __init__.py  bayesian_dixon_coles.py  ensemble_data.parquet  fit_scoreline_shape.py  logging_config.py  ml_predictor.py
models/quantbet/: README.md  dc_utils.py  demo.py  evaluation.py  staking.py
scripts/: __init__.py  elo_etl.py  etl_pipeline.py  load_squads.py  odds_api.py  train_ensemble.py
tests/: ab_static_vs_dynamic.py  benchmark_scoreline.py  full_49k_benchmark.py  test_exceptions.py  test_ml_predictor_temporal.py  test_pooling.py  test_registry.py  test_value_engine.py  test_worldcup_model.py  test_worldcup_smoke.py
wc2026-score-predictions/: CLAUDE.md  LICENSE
wc2026-score-predictions/api/: routes.py  schemas.py  server.py
wc2026-score-predictions/data/: elo_ratings.json
wc2026-score-predictions/db/: config.py  settings.py
wc2026-score-predictions/docs/: FRAMEWORK.txt
wc2026-score-predictions/models/: bayesian_dixon_coles.py  dixon_coles.py  exceptions.py  rebuild_v9_gas.py  registry.py
wc2026-score-predictions/scripts/: elo_fetcher.py  fit_scoreline_shape.py  scheduler.py
wc2026-score-predictions/tests/: __init__.py  conftest.py  full_pipeline_benchmark.py  test_api.py  test_devig.py  (+1 more)
(+32 files in other folders)
