[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "wc2026-score-predictions"
version = "9.1.0"
description = "Bayesian Dixon-Coles score prediction + Shin de-vig value betting + FastAPI serving"
requires-python = ">=3.10"
authors = [
    {name = "Yue LIN"},
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "openpyxl>=3.1.0",
    "schedule>=1.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-json-logger>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.19.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.setuptools.packages.find]
include = ["models*", "scripts*", "db*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
timeout = 120

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_configs = true
packages = ["models.quantbet", "models.registry", "db", "api"]
